--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,18 +17,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "content_fp = './database/Content.csv'\n",
     "compound_fp = './database/Compound.csv'\n",
+    "\n",
+    "\n",
+    "content_fp = './database/Content.csv'\n",
+    "drug_info_comb_fp = './data/Drug_info_combined.csv'\n",
     "food_fp = './database/Food.csv'\n",
-    "df = pd.read_csv(food_fp, chunksize = 16)"
+    "\n",
+    "pd.set_option('display.max_columns', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# df = pd.read_csv(food_fp, chunksize = 16)\n",
     "# for i in df:\n",
     "#     print(i.iloc[0, :])\n",
     "#     break"
@@ -36,19 +41,379 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>source_id</th>\n",
+       "      <th>source_type</th>\n",
+       "      <th>food_id</th>\n",
+       "      <th>orig_food_id</th>\n",
+       "      <th>orig_food_common_name</th>\n",
+       "      <th>orig_food_scientific_name</th>\n",
+       "      <th>orig_food_part</th>\n",
+       "      <th>orig_source_id</th>\n",
+       "      <th>orig_source_name</th>\n",
+       "      <th>orig_content</th>\n",
+       "      <th>orig_min</th>\n",
+       "      <th>orig_max</th>\n",
+       "      <th>orig_unit</th>\n",
+       "      <th>orig_citation</th>\n",
+       "      <th>citation</th>\n",
+       "      <th>citation_type</th>\n",
+       "      <th>creator_id</th>\n",
+       "      <th>updater_id</th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>updated_at</th>\n",
+       "      <th>orig_method</th>\n",
+       "      <th>orig_unit_expression</th>\n",
+       "      <th>standard_content</th>\n",
+       "      <th>preparation_type</th>\n",
+       "      <th>export</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nutrient</td>\n",
+       "      <td>4</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Kiwi</td>\n",
+       "      <td>Actinidia chinensis PLANCHON [Actinidiaceae]</td>\n",
+       "      <td>Fruit</td>\n",
+       "      <td>FAT</td>\n",
+       "      <td>FAT</td>\n",
+       "      <td>1955.00</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>3840.0</td>\n",
+       "      <td>mg/100g</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DUKE</td>\n",
+       "      <td>DATABASE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2014-11-05 13:42:11 UTC</td>\n",
+       "      <td>2019-12-11 20:23:57 UTC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1955.00</td>\n",
+       "      <td>raw</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nutrient</td>\n",
+       "      <td>6</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Onion</td>\n",
+       "      <td>Allium cepa L. [Liliaceae]</td>\n",
+       "      <td>Bulb</td>\n",
+       "      <td>FAT</td>\n",
+       "      <td>FAT</td>\n",
+       "      <td>1853.95</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>3607.9</td>\n",
+       "      <td>mg/100g</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DUKE</td>\n",
+       "      <td>DATABASE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2014-11-05 13:42:11 UTC</td>\n",
+       "      <td>2019-12-11 20:23:57 UTC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1853.95</td>\n",
+       "      <td>raw</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  source_id source_type  food_id  orig_food_id orig_food_common_name  \\\n",
+       "0   1          1    Nutrient        4            29                  Kiwi   \n",
+       "1   2          1    Nutrient        6            53                 Onion   \n",
+       "\n",
+       "                      orig_food_scientific_name orig_food_part orig_source_id  \\\n",
+       "0  Actinidia chinensis PLANCHON [Actinidiaceae]          Fruit            FAT   \n",
+       "1                    Allium cepa L. [Liliaceae]           Bulb            FAT   \n",
+       "\n",
+       "  orig_source_name  orig_content  orig_min  orig_max orig_unit  orig_citation  \\\n",
+       "0              FAT       1955.00      70.0    3840.0   mg/100g            NaN   \n",
+       "1              FAT       1853.95     100.0    3607.9   mg/100g            NaN   \n",
+       "\n",
+       "  citation citation_type  creator_id  updater_id               created_at  \\\n",
+       "0     DUKE      DATABASE         NaN         NaN  2014-11-05 13:42:11 UTC   \n",
+       "1     DUKE      DATABASE         NaN         NaN  2014-11-05 13:42:11 UTC   \n",
+       "\n",
+       "                updated_at  orig_method  orig_unit_expression  \\\n",
+       "0  2019-12-11 20:23:57 UTC          NaN                   NaN   \n",
+       "1  2019-12-11 20:23:57 UTC          NaN                   NaN   \n",
+       "\n",
+       "   standard_content preparation_type  export  \n",
+       "0           1955.00              raw       0  \n",
+       "1           1853.95              raw       0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "cirpy.resolve('', 'smiles')"
+    "content_df = pd.read_csv(content_fp, chunksize = 16)\n",
+    "for i in content_df:\n",
+    "    display(i.head(2))\n",
+    "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Applications/anaconda3/envs/deepddi2/lib/python3.6/site-packages/IPython/core/interactiveshell.py:3072: DtypeWarning: Columns (3,4,5,6,12,13,14,15) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
+   "source": [
+    "compound_df = pd.read_csv(compound_fp)\n",
+    "# for i in compound_df:\n",
+    "#     display(i.head(2).T)\n",
+    "#     tmp = i.loc[i.description == '350602-26-5', 'cas_number'].values\n",
+    "#     display(tmp)\n",
+    "#     break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Drug name</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Smiles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DB00006</td>\n",
+       "      <td>Bivalirudin</td>\n",
+       "      <td>CC[C@H](C)[C@H](NC(=O)[C@H](CCC(O)=O)NC(=O)[C@...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DB00014</td>\n",
+       "      <td>Goserelin</td>\n",
+       "      <td>CC(C)C[C@H](NC(=O)[C@@H](COC(C)(C)C)NC(=O)[C@H...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DB00035</td>\n",
+       "      <td>Desmopressin</td>\n",
+       "      <td>NC(=O)CC[C@@H]1NC(=O)[C@H](CC2=CC=CC=C2)NC(=O)...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DB00050</td>\n",
+       "      <td>Cetrorelix</td>\n",
+       "      <td>CC(C)C[C@H](NC(=O)[C@@H](CCCNC(N)=O)NC(=O)[C@H...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>DB00080</td>\n",
+       "      <td>Daptomycin</td>\n",
+       "      <td>CCCCCCCCCC(=O)N[C@@H](CC1=CNC2=C1C=CC=C2)C(=O)...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2381</th>\n",
+       "      <td>DB14104</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CCCCC\\C=C/C\\C=C/CCCCCCCC(O)=O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2382</th>\n",
+       "      <td>DB14116</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>O.[O--].[O--].[Mg++].[Mg++].[Al+3].[Al+3].[O-]...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2383</th>\n",
+       "      <td>DB14151</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[P]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2384</th>\n",
+       "      <td>DB14156</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CC1(C)C2CCC1(C)C(=O)C2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2385</th>\n",
+       "      <td>DB14173</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OCNC(=O)N(CO)C1N(CO)C(=O)N(CO)C1=O</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2386 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Drug name          Name  \\\n",
+       "0      DB00006   Bivalirudin   \n",
+       "1      DB00014     Goserelin   \n",
+       "2      DB00035  Desmopressin   \n",
+       "3      DB00050    Cetrorelix   \n",
+       "4      DB00080    Daptomycin   \n",
+       "...        ...           ...   \n",
+       "2381   DB14104           NaN   \n",
+       "2382   DB14116           NaN   \n",
+       "2383   DB14151           NaN   \n",
+       "2384   DB14156           NaN   \n",
+       "2385   DB14173           NaN   \n",
+       "\n",
+       "                                                 Smiles  \n",
+       "0     CC[C@H](C)[C@H](NC(=O)[C@H](CCC(O)=O)NC(=O)[C@...  \n",
+       "1     CC(C)C[C@H](NC(=O)[C@@H](COC(C)(C)C)NC(=O)[C@H...  \n",
+       "2     NC(=O)CC[C@@H]1NC(=O)[C@H](CC2=CC=CC=C2)NC(=O)...  \n",
+       "3     CC(C)C[C@H](NC(=O)[C@@H](CCCNC(N)=O)NC(=O)[C@H...  \n",
+       "4     CCCCCCCCCC(=O)N[C@@H](CC1=CNC2=C1C=CC=C2)C(=O)...  \n",
+       "...                                                 ...  \n",
+       "2381                      CCCCC\\C=C/C\\C=C/CCCCCCCC(O)=O  \n",
+       "2382  O.[O--].[O--].[Mg++].[Mg++].[Al+3].[Al+3].[O-]...  \n",
+       "2383                                                [P]  \n",
+       "2384                             CC1(C)C2CCC1(C)C(=O)C2  \n",
+       "2385                 OCNC(=O)N(CO)C1N(CO)C(=O)N(CO)C1=O  \n",
+       "\n",
+       "[2386 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drug_info_comb = pd.read_csv(drug_info_comb_fp, index_col = 'Unnamed: 0')\n",
+    "drug_info_comb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "input_json = {\n",
+    "      \"title\": \"Tylenol Extra Strength Caplets with 500 mg Acetaminophen, 100 ct\",\n",
+    "      \"description\": \"100-ct. of Tylenol Extra Strength Caplets with acetaminophen as pain reliever and fever reducerProvides temporary relief of minor aches and pains and helps reduce feverEach extra strength caplet contains 500 mg of acetaminophen, an effective pain relief ingredientRelieves common pain symptoms including headache, backache and menstrual crampsAlso works as a fever reducer and helps alleviate pain symptoms related to the common coldWhen used as directed, this pain reliever has an excellent safety profileThis oral pain reliever can be used by adults and children who are 12 years and olderFrom the #1 doctor-recommended brand of pain reliever, experience pain relief with TYLENOL\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compounds[compounds == 'acetaminophen']\n",
+    "re.search('acetaminophen', input_json['description'].lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "drug_info_comb_fp = './data/Drug_info_combined.csv'\n",
+    "drug_info_comb = pd.read_csv(drug_info_comb_fp, index_col = 'Unnamed: 0')\n",
+    "compounds = drug_info_comb.Name.dropna()\n",
+    "\n",
+    "def fuzzy_search(input_json, output_fp = './DDI_input.txt', pools = compounds):    \n",
+    "    description = input_json['description'].lower()\n",
+    "    out = []\n",
+    "    for compound in pools:\n",
+    "        pattern = compound.strip().lower()\n",
+    "        if re.search(pattern, description):\n",
+    "            out.append(compound)\n",
+    "    if output_fp:\n",
+    "        with open(output_fp, 'a') as fw:\n",
+    "            to_write = '\\n'+'\\n'.join(out)\n",
+    "            fw.write(to_write)\n",
+    "\n",
+    "def ingest_input(input_json):\n",
+    "    fuzzy_search(input_json['current_drug'])\n",
+    "    for other_drug in input_json['other_drug']:\n",
+    "        fuzzy_search(other_drug['current_drug'])"
+   ]
   },
   {
    "cell_type": "code",
