--- a/eda.ipynb
+++ b/eda.ipynb
@@ -765,12 +765,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
     "dfi_sample_input = {'current_drug': {'drug_title': 'Bad Drug', 'drug_desc': '? Acetaminophen '},\n",
-    " 'food': ['lemon', 'citrus']}\n",
+    " 'food': ['lemon', 'orange']}\n",
     "\n",
     "ddi_sample_input =  {'current_drug': {'drug_title': 'Good Drug', 'drug_desc': '! Biotin !'},\n",
     " 'other_drug': [{'drug_title': 'So-so Drug', 'drug_desc': ' cool  Vitamin C '},\n",
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 324,
    "metadata": {
     "scrolled": true
    },
@@ -791,307 +791,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Prescription</th>\n",
-       "      <th>Drug_pair</th>\n",
-       "      <th>Interaction_type</th>\n",
-       "      <th>Sentence</th>\n",
-       "      <th>DDI_prob</th>\n",
-       "      <th>DDI_prob_std</th>\n",
-       "      <th>Confidence_DDI</th>\n",
-       "      <th>Side effects (left)</th>\n",
-       "      <th>Side effects (right)</th>\n",
-       "      <th>Similar approved drugs (left)</th>\n",
-       "      <th>Similar approved drugs (right)</th>\n",
-       "      <th>drug1</th>\n",
-       "      <th>drug2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Choline_L-Threonine</td>\n",
-       "      <td>113</td>\n",
-       "      <td>The risk or severity of adverse effects can be...</td>\n",
-       "      <td>0.670986</td>\n",
-       "      <td>0.270881</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>DB01401</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Choline</td>\n",
-       "      <td>L-Threonine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Acetaminophen_L-Threonine</td>\n",
-       "      <td>34</td>\n",
-       "      <td>L-Threonine may increase the central nervous s...</td>\n",
-       "      <td>0.738312</td>\n",
-       "      <td>0.204355</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Acetaminophen</td>\n",
-       "      <td>L-Threonine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>L-Threonine_L-Proline</td>\n",
-       "      <td>74</td>\n",
-       "      <td>The therapeutic efficacy of L-Proline can be d...</td>\n",
-       "      <td>0.614700</td>\n",
-       "      <td>0.345221</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>L-Threonine</td>\n",
-       "      <td>L-Proline</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>L-Proline_L-Threonine</td>\n",
-       "      <td>34</td>\n",
-       "      <td>L-Threonine may increase the central nervous s...</td>\n",
-       "      <td>0.562382</td>\n",
-       "      <td>0.270610</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>L-Proline</td>\n",
-       "      <td>L-Threonine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Alpha-Linolenic Acid_L-Threonine</td>\n",
-       "      <td>113</td>\n",
-       "      <td>The risk or severity of adverse effects can be...</td>\n",
-       "      <td>0.711283</td>\n",
-       "      <td>0.203423</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Alpha-Linolenic Acid</td>\n",
-       "      <td>L-Threonine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>439</th>\n",
-       "      <td>342</td>\n",
-       "      <td>Calcium_L-Leucine</td>\n",
-       "      <td>20</td>\n",
-       "      <td>The serum concentration of L-Leucine can be de...</td>\n",
-       "      <td>0.572782</td>\n",
-       "      <td>0.326657</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Calcium</td>\n",
-       "      <td>L-Leucine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>441</th>\n",
-       "      <td>343</td>\n",
-       "      <td>L-Aspartic Acid_L-Leucine</td>\n",
-       "      <td>20</td>\n",
-       "      <td>The serum concentration of L-Leucine can be de...</td>\n",
-       "      <td>0.911670</td>\n",
-       "      <td>0.208806</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>DB00142</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>L-Aspartic Acid</td>\n",
-       "      <td>L-Leucine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>442</th>\n",
-       "      <td>344</td>\n",
-       "      <td>L-Leucine_L-Tyrosine</td>\n",
-       "      <td>74</td>\n",
-       "      <td>The therapeutic efficacy of L-Tyrosine can be ...</td>\n",
-       "      <td>0.539878</td>\n",
-       "      <td>0.298923</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>DB01235;DB00765</td>\n",
-       "      <td>L-Leucine</td>\n",
-       "      <td>L-Tyrosine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>443</th>\n",
-       "      <td>344</td>\n",
-       "      <td>L-Tyrosine_L-Leucine</td>\n",
-       "      <td>10</td>\n",
-       "      <td>The therapeutic efficacy of L-Tyrosine can be ...</td>\n",
-       "      <td>0.575617</td>\n",
-       "      <td>0.335519</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>DB01235;DB02959</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>L-Tyrosine</td>\n",
-       "      <td>L-Leucine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>450</th>\n",
-       "      <td>350</td>\n",
-       "      <td>L-Tyrosine_L-Aspartic Acid</td>\n",
-       "      <td>113</td>\n",
-       "      <td>The risk or severity of adverse effects can be...</td>\n",
-       "      <td>0.605027</td>\n",
-       "      <td>0.209010</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>DB01235;DB00120;DB00765</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>L-Tyrosine</td>\n",
-       "      <td>L-Aspartic Acid</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>320 rows × 13 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     Prescription                         Drug_pair  Interaction_type  \\\n",
-       "0               0               Choline_L-Threonine               113   \n",
-       "1               1         Acetaminophen_L-Threonine                34   \n",
-       "2               2             L-Threonine_L-Proline                74   \n",
-       "3               2             L-Proline_L-Threonine                34   \n",
-       "5               3  Alpha-Linolenic Acid_L-Threonine               113   \n",
-       "..            ...                               ...               ...   \n",
-       "439           342                 Calcium_L-Leucine                20   \n",
-       "441           343         L-Aspartic Acid_L-Leucine                20   \n",
-       "442           344              L-Leucine_L-Tyrosine                74   \n",
-       "443           344              L-Tyrosine_L-Leucine                10   \n",
-       "450           350        L-Tyrosine_L-Aspartic Acid               113   \n",
-       "\n",
-       "                                              Sentence  DDI_prob  \\\n",
-       "0    The risk or severity of adverse effects can be...  0.670986   \n",
-       "1    L-Threonine may increase the central nervous s...  0.738312   \n",
-       "2    The therapeutic efficacy of L-Proline can be d...  0.614700   \n",
-       "3    L-Threonine may increase the central nervous s...  0.562382   \n",
-       "5    The risk or severity of adverse effects can be...  0.711283   \n",
-       "..                                                 ...       ...   \n",
-       "439  The serum concentration of L-Leucine can be de...  0.572782   \n",
-       "441  The serum concentration of L-Leucine can be de...  0.911670   \n",
-       "442  The therapeutic efficacy of L-Tyrosine can be ...  0.539878   \n",
-       "443  The therapeutic efficacy of L-Tyrosine can be ...  0.575617   \n",
-       "450  The risk or severity of adverse effects can be...  0.605027   \n",
-       "\n",
-       "     DDI_prob_std  Confidence_DDI Side effects (left) Side effects (right)  \\\n",
-       "0        0.270881               1                 NaN                  NaN   \n",
-       "1        0.204355               1                 NaN                  NaN   \n",
-       "2        0.345221               1                 NaN                  NaN   \n",
-       "3        0.270610               1                 NaN                  NaN   \n",
-       "5        0.203423               1                 NaN                  NaN   \n",
-       "..            ...             ...                 ...                  ...   \n",
-       "439      0.326657               1                 NaN                  NaN   \n",
-       "441      0.208806               1                 NaN                  NaN   \n",
-       "442      0.298923               0                 NaN                  NaN   \n",
-       "443      0.335519               1                 NaN                  NaN   \n",
-       "450      0.209010               1                 NaN                  NaN   \n",
-       "\n",
-       "    Similar approved drugs (left) Similar approved drugs (right)  \\\n",
-       "0                         DB01401                            NaN   \n",
-       "1                             NaN                            NaN   \n",
-       "2                             NaN                            NaN   \n",
-       "3                             NaN                            NaN   \n",
-       "5                             NaN                            NaN   \n",
-       "..                            ...                            ...   \n",
-       "439                           NaN                            NaN   \n",
-       "441                       DB00142                            NaN   \n",
-       "442                           NaN                DB01235;DB00765   \n",
-       "443               DB01235;DB02959                            NaN   \n",
-       "450       DB01235;DB00120;DB00765                            NaN   \n",
-       "\n",
-       "                    drug1            drug2  \n",
-       "0                 Choline      L-Threonine  \n",
-       "1           Acetaminophen      L-Threonine  \n",
-       "2             L-Threonine        L-Proline  \n",
-       "3               L-Proline      L-Threonine  \n",
-       "5    Alpha-Linolenic Acid      L-Threonine  \n",
-       "..                    ...              ...  \n",
-       "439               Calcium        L-Leucine  \n",
-       "441       L-Aspartic Acid        L-Leucine  \n",
-       "442             L-Leucine       L-Tyrosine  \n",
-       "443            L-Tyrosine        L-Leucine  \n",
-       "450            L-Tyrosine  L-Aspartic Acid  \n",
-       "\n",
-       "[320 rows x 13 columns]"
+       "array(['The therapeutic efficacy of Folic Acid can be decreased when used in combination with Acetaminophen.',\n",
+       "       'The metabolism of Acetaminophen can be decreased when combined with Thiamine.'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "thres = 0.5\n",
+    "thres = 0.95\n",
     "res = pd.read_csv('output/Final_annotated_DDI_result.txt',\n",
     "                  sep='\\t', header=0)\n",
     "\n",
-    "res.loc[res.DDI_prob >= thres]"
+    "res.loc[(res.DDI_prob >= thres) &\n",
+    "        ((res.drug1 == 'Acetaminophen') |\n",
+    "        (res.drug2 == 'Acetaminophen'))].Sentence.values"
    ]
   },
   {
