--- a/eda.ipynb
+++ b/eda.ipynb
@@ -732,11 +732,9 @@
     "        drug_pools = pd.read_csv(compounds_path).Name\n",
     "        food_pools = pd.read_csv(food_path).Name\n",
     "        cur_desc = input_json['current_drug']['drug_desc'].lower()\n",
-    "        out += regex_search(cur_desc, drug_pools)\n",
     "        for food in input_json['food']:\n",
-    "            res = regex_search(food.lower(), food_pools)\n",
-    "            for r in res:\n",
-    "                out += list(food2comp[r]) \n",
+    "            out.append(food.lower())\n",
+    "        out = regex_search(cur_desc, drug_pools) + out\n",
     "    # TODO handle not-found case        \n",
     "        \n",
     "    if os.path.exists(input_fp):\n",
