--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,6 +703,10 @@
     "MODEL_DIR = '/Documents/GitHub/deepddi2/'\n",
     "INPUT_PATH = './DDI_input.txt'\n",
     "OUTPUT_DIR = './output'\n",
+    "OUTPUT_TXT = 'output/Final_annotated_DDI_result.txt'\n",
+    "SIGNIFICANCE = 0.95\n",
+    "DFI_INPUT_DRUGS = []\n",
+    "\n",
     "def regex_search(desc, pools):\n",
     "    # assume desc is lowercased\n",
     "    out = []\n",
@@ -716,6 +720,7 @@
     "                 compounds_path = './database/compounds.csv',\n",
     "                 food_path = './database/food.csv'):\n",
     "    assert interaction_type.lower() in ['ddi', 'dfi'], 'API not supported'\n",
+    "    global DFI_INPUT_DRUGS\n",
     "    out = []\n",
     "    \n",
     "    # handle ddi\n",
@@ -734,7 +739,11 @@
     "        cur_desc = input_json['current_drug']['drug_desc'].lower()\n",
     "        for food in input_json['food']:\n",
     "            out.append(food.lower())\n",
-    "        out = regex_search(cur_desc, drug_pools) + out\n",
+    "        \n",
+    "        input_drug = regex_search(cur_desc, drug_pools)\n",
+    "        DFI_INPUT_DRUGS += input_drug\n",
+    "#         print(DFI_INPUT_DRUGS, input_drug)\n",
+    "        out = input_drug + out\n",
     "    # TODO handle not-found case        \n",
     "        \n",
     "    if os.path.exists(input_fp):\n",
@@ -750,20 +759,50 @@
     "    cmd = ('python run_DeepDDI.py -i %s -o %s'%(INPUT_PATH, OUTPUT_DIR)).split()\n",
     "#     print(subprocess.run(cmd))\n",
     "    # remove input.txt\n",
+    "\n",
+    "\n",
     "def format_output():\n",
+    "    # TODO: handle DFI comp2food \n",
+    "    # TODO: hanlde interaction id2desc\n",
     "    pass\n",
     "\n",
-    "def collect_output():\n",
-    "    pass\n",
-    "#     with open(OUTPUT_DIR, 'r') as fh:\n",
-    "#         fh.\n",
-    "#     out = format_output()\n",
+    "def collect_output(thres = SIGNIFICANCE, out_txt = OUTPUT_TXT):\n",
+    "    thres = 0.95\n",
+    "    res = pd.read_csv(out_txt,\n",
+    "                      sep='\\t', \n",
+    "                      header=0)[['drug1', 'drug2',\n",
+    "                                          'DDI_prob', 'DDI_prob_std',\n",
+    "                                          'Confidence_DDI', 'Sentence',\n",
+    "                                          'Interaction_type']]\n",
+    "    \n",
+    "    temp = res.loc[(res.Confidence_DDI == 1) &\\\n",
+    "                   (res.DDI_prob >= thres)]\n",
+    "    \n",
+    "    if DFI_INPUT_DRUGS:\n",
+    "        temp = temp.loc[(res.drug1.str.contains('|'.join(DFI_INPUT_DRUGS))) |\\\n",
+    "                        (res.drug2.str.contains('|'.join(DFI_INPUT_DRUGS)))]\n",
+    "    out = {}\n",
+    "    out['interations'] = []\n",
+    "    for line in temp.iterrows():\n",
+    "        inner_out = {}\n",
+    "        row = line[1].values\n",
+    "    #     print(row)\n",
+    "        drug_pair = [row[0], row[1]]\n",
+    "        interaction_desc = row[5]\n",
+    "        side_effect = {}\n",
+    "        side_effect['probability'] = row[2]\n",
+    "        side_effect['side_effect_id'] = row[6]\n",
+    "        inner_out['drug_pair'] = drug_pair\n",
+    "        inner_out['interaction_desc'] = interaction_desc\n",
+    "        inner_out['side_effect'] = side_effect\n",
+    "        out['interations'].append(inner_out)\n",
+    "    return out\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,42 +816,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 123,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "ingest_input(dfi_sample_input, 'dfi')\n",
-    "# ingest_input(ddi_sample_input, 'ddi')"
+    "# ingest_input(ddi_sample_input, 'ddi')\n",
+    "DFI_INPUT_DRUG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['The therapeutic efficacy of Folic Acid can be decreased when used in combination with Acetaminophen.',\n",
-       "       'The metabolism of Acetaminophen can be decreased when combined with Thiamine.'],\n",
-       "      dtype=object)"
+       "{'interations': [{'drug_pair': ['Acetaminophen', 'Folic Acid'],\n",
+       "   'interaction_desc': 'The therapeutic efficacy of Folic Acid can be decreased when used in combination with Acetaminophen.',\n",
+       "   'side_effect': {'probability': 0.9967656, 'side_effect_id': 74}},\n",
+       "  {'drug_pair': ['Acetaminophen', 'Thiamine'],\n",
+       "   'interaction_desc': 'The metabolism of Acetaminophen can be decreased when combined with Thiamine.',\n",
+       "   'side_effect': {'probability': 0.9861411, 'side_effect_id': 89}}]}"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "thres = 0.95\n",
-    "res = pd.read_csv('output/Final_annotated_DDI_result.txt',\n",
-    "                  sep='\\t', header=0)\n",
-    "\n",
-    "res.loc[(res.DDI_prob >= thres) &\n",
-    "        ((res.drug1 == 'Acetaminophen') |\n",
-    "        (res.drug2 == 'Acetaminophen'))].Sentence.values"
+    "collect_output()"
    ]
   },
   {
